[gd_scene load_steps=6 format=3 uid="uid://c1yp4ie5imxnl"]

[ext_resource type="Texture2D" uid="uid://b31jufsoxxfxx" path="res://assets/Cartas/FondoCartas.png" id="1_hmfc5"]
[ext_resource type="Script" uid="uid://c8a4eh2skk8dj" path="res://scripts/Ui/result_panel.gd" id="1_xugo3"]
[ext_resource type="Texture2D" uid="uid://die65ne8roxau" path="res://assets/orhers/tabla de resultados.png" id="2_xugo3"]
[ext_resource type="Texture2D" uid="uid://cte53ktyhi8ik" path="res://assets/Player_assets/Player0001.png" id="3_rr0ni"]
[ext_resource type="Texture2D" uid="uid://46biwyojpivp" path="res://assets/Player_assets/Player0045.png" id="4_1560d"]

[node name="ResultPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xugo3")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.12941177)

[node name="Board" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hmfc5")

[node name="TablaDeResultados" type="Sprite2D" parent="Board"]
position = Vector2(1249.3125, 577.00006)
scale = Vector2(1.1588135, 0.598348)
texture = ExtResource("2_xugo3")

[node name="TitleLabel" type="Label" parent="Board"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.5
offset_top = 184.0
offset_right = 132.5
offset_bottom = 253.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Resultados"

[node name="LeftSkinPreview" type="TextureRect" parent="Board"]
layout_mode = 0
offset_left = 402.0
offset_top = 241.0
offset_right = 910.0
offset_bottom = 679.0
texture = ExtResource("3_rr0ni")

[node name="LeftPetPreview" type="TextureRect" parent="Board"]
layout_mode = 0
offset_left = 539.0
offset_top = 387.0
offset_right = 945.0
offset_bottom = 686.0
texture = ExtResource("4_1560d")

[node name="ShopButton" type="TextureButton" parent="Board"]
layout_mode = 0
offset_left = 405.00003
offset_top = 683.0
offset_right = 1941.0
offset_bottom = 1707.0
scale = Vector2(0.3, 0.1)
texture_normal = ExtResource("1_hmfc5")

[node name="DistanceLabel" type="Label" parent="Board"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 160.0
offset_top = 351.0
offset_right = 425.0
offset_bottom = 420.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50

[node name="RunCoinsLabel" type="Label" parent="Board"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 162.0
offset_top = 447.0
offset_right = 427.0
offset_bottom = 516.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50

[node name="BestScoreLabel" type="Label" parent="Board"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 160.0
offset_top = 556.0
offset_right = 425.0
offset_bottom = 625.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50

[node name="RetryButton" type="TextureButton" parent="Board"]
layout_mode = 0
offset_left = 1024.0
offset_top = 677.0
offset_right = 2560.0
offset_bottom = 1701.0
scale = Vector2(0.3, 0.1)
texture_normal = ExtResource("1_hmfc5")
